--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@types/react-slick": "^0.23.13",
     "next": "14.1.0",
     "next-intl": "^3.7.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slick": "^0.30.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "20.11.17",
