--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@types/graphql": "^14.5.0",
     "@types/react-slick": "^0.23.13",
     "@types/swiper": "^6.0.0",
+    "graphql": "^16.8.1",
     "next": "14.1.0",
     "next-intl": "^3.7.0",
     "react": "18.2.0",
