--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@types/axios": "^0.14.0",
     "@types/graphql": "^14.5.0",
+    "@types/nprogress": "^0.2.3",
     "@types/react-slick": "^0.23.13",
     "@types/swiper": "^6.0.0",
+    "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "graphql": "^16.8.1",
     "next": "14.1.0",
     "next-intl": "^3.7.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.30.1",
